--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "2.1.8",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.1",
-    "redux-promise-middleware": "^6.1.0"
+    "redux-promise-middleware": "^6.1.0",
+    "stripe": "^6.31.1"
   },
   "scripts": {
     "start": "react-scripts start",
