--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.1",
     "redux-promise-middleware": "^6.1.0",
-    "stripe": "^6.31.1"
+    "stripe": "^6.31.1",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
